--- a/Project.toml
+++ b/Project.toml
@@ -5,5 +5,7 @@ version = "0.1.0"
 
 [deps]
 LinearFitXYerrors = "f30eeb3b-f5f0-4632-88ad-a7e11dd3714b"
+LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
+Polyester = "f517fe37-dbe3-4b94-8317-1923a5111588"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
